# bentoml-embeddings

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bentofile.yaml  compose.yaml  pyproject.toml  pytest.ini  renovate.json  service.py
.github/workflows/: build.yml  release.yml
tests/: test_embedding.py  test_http.py  test_integration.py  test_service.py
