[project]
name = "project"
version = "0.1.0"
requires-python = "==3.12.7"
dependencies = [
    "bentoml>=1.3.15",
    "einops>=0.8.0",
    "pytest>=8.3.4",
    "rerankers[transformers]>=0.6.1",
    "sentence-transformers>=3.3.1",
    "sentencepiece>=0.2.0",
]

[project.optional-dependencies]
build = ["torch", "setuptools", "packaging"]
compile = ["flash-attn"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.6.3"
requires-dist = ["torch", "einops"]
